test/libsolidity/syntaxTests/operators/userDefined/defining_operator_for_error.sol
using {add as +} for E global;

error E();

function add(E, E) pure returns (E) {
    return E.E1;
}

// ----
// TypeError 5172: (21-22): Name has to refer to a user-defined type.
